--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Compra frutas y verduras a un excelente precio. Distribuimos productos organicos de primera calidad a Hoteles, Restaurantes, Casas y Comedores industriales. Mejor servicio y atención en el mercado, garantizado."
-      content="Venta de frutas y verduras"
+      name="Administración de Mercadolibre."
+      content="Jorge de la Mora Menéndez"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Mercado a la mano</title>
+    <title>Somos geek</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
